--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "fuse.js": "^7.1.0",
+    "hono": "^4.10.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
@@ -64,6 +65,6 @@
     "typescript-eslint": "^8.46.0",
     "vite": "^7.1.9",
     "vitest": "^3.2.4",
-    "wrangler": "^4.46.0"
+    "wrangler": "^4.47.0"
   }
 }
